--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h2>Get In Touch</h2>
         <h3>If you have any Queries.</h3>
         <p>If you want to know more about me, I would love to connect with you!</p>
-        <a class="btn" href="mailto:somyagrawal2004@email.com" >CONTACT ME</a>
+        <a class="btn" href="mailto:somyagrawal2004@gmail.com" >CONTACT ME</a>
       </div>
     </div>
 
