--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
 
       <div class="work">
-        <h2>My Work.</h2>
-        <p>Here is my Graphic design portfolio containing a few samples of my work. I hope you will like it!</p>
+        <div class="work-intro">
+          <h2>My Work.</h2>
+          <p>Here is my Graphic design portfolio containing a few samples of my work. I hope you will like it!</p>
+        </div>
         <div class="work-grid">
           <div class="work-container">
             <div><img src="./images/grid-images/pink.jpg" alt="" width="200px" height="134px" class="set3"></div>
