--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="profile">
         <img class="my-img" width="200px" src="images/profile.png" alt="profile picture">
         <h2>Hello!</h2>
-        <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri Ram College of Commerce, University of Delhi. I like learning new things and creating art.</p>
+        <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri ram college of commerce, University of delhi. I like learning new things and creating art.</p>
       </div>
       <hr>
       <div class="skills">
