--- a/index.html
+++ b/index.html
@@ -24,20 +24,23 @@
       <div class="profile">
         <img class="my-img" width="200px" src="images/profile.png" alt="profile picture">
         <h2>Hello!</h2>
-        <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri Ram College of Commerce, University of Delhi. I like learning new things and creating art.</p>
+        <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri ram college of commerce, University of delhi. I like learning new things and creating art.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2>My Skills.</h2>
+        <h2>My Interests.</h2>
         <div class="skill-row1">
           <img class="skill-img1" src="images/designn.png" alt="graphic-img">
-          <h3>Graphic Designing</h3>
-          <p>I always had an interest in designing and so I developed my skill of designing on Canva.</p>
+          <h3>Designing and Development</h3>
+          <p>I'm a self-taught Graphic Designer and it is one of my favourite things to do. I started learning graphic design on Canva, I also tried my hands on Adobe Photoshop, and front-end web-developement.</p>
         </div>
         <div class="skill-row2">
           <img class="skill-img2" src="images/musicc.png" alt="music-img">
           <h3>Music</h3>
           <p>Music has always been my escape and I have nurtured it by self-learning singing and instruments like ukulele.</p>
+        </div>
+        <div>
+
         </div>
       </div>
       <hr>
@@ -53,9 +56,13 @@
             <div><img src="./images/grid-images/pink.jpg" alt="" width="200px" height="134px" class="set3"></div>
             <div id="grid"><img src="./images/grid-images/grid-post.png" alt="grid" width="410px" height="134px" class="set1"></div>
             <div><img src="./images/grid-images/phtography.png" alt="second" width="200px" class="set2"></div>
-            <div><img src="./images/grid-images/holi.jpg" alt="" width="200px" class="set3"></div>
+            <div><img src="./images/grid-images/murder mystery.png" alt="" width="200px" class="set3"></div>
             <div><img src="./images/grid-images/saree.png" alt="" width="200px" class="set2"></div>
             <div id="carousel"><img src="./images/grid-images/Carousel_ad.jpg" alt="carousel" width="620px" class="set1"></div>
+            <div><img src="./images/grid-images/holi.jpg" alt="" width="200px" class="set2"></div>
+            <div><img src="./images/grid-images/Child Rights.png" alt="" width="200px" class="set1"></div>
+            <div><img src="./images/grid-images/dussehra story .png" alt="" width="200px" class="set3"></div>
+            
           </div>
         </div>
       </div>
