--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="my-img" width="200px" src="images/profile.png" alt="profile picture">
+        <img class="my-img" width="200px" src="images/my-picture.png" alt="profile picture">
         <h2>Hello!</h2>
         <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri ram college of commerce, University of delhi. I like learning new things and creating art.</p>
       </div>
