--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/somya-agrawal-212199235/">LinkedIn</a>
       <a class="footer-link" href="https://instagram.com/somya_agrawal18">Instagram</a>
-      <a class="footer-link" href="">Website</a>
+      <a class="footer-link" href="https://drive.google.com/file/d/1ARYDO4yVyroZ6v1HL-tBHIor1jKE4UWx/view?usp=sharing">Resume</a>
       <p class="credit">© Somya Agrawal</p>
     </div>
 
