--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="profile">
         <img class="my-img" width="200px" src="images/my-picture.png" alt="profile picture">
         <h2>Hello!</h2>
-        <p>I am Somya Agrawal, a first year B.Com (Hons) student at Shri ram college of commerce, University of delhi. I like learning new things and creating art.</p>
+        <p>I am Somya Agrawal, a second year B.Com (Hons) student at Shri ram college of commerce, University of delhi. I like learning new things and creating art.</p>
       </div>
       <hr>
       <div class="skills">
@@ -37,7 +37,7 @@
         <div class="skill-row2">
           <img class="skill-img2" src="images/musicc.png" alt="music-img">
           <h3>Music</h3>
-          <p>Music has always been my escape and I have nurtured it by self-learning singing and instruments like ukulele.</p>
+          <p>Music has always been my escape and I have nurtured it by self-learning singing and instruments like ukulele and guitar.</p>
         </div>
         <div>
 
